# synapse

./: Cargo.toml  example_config.toml
adns/: Cargo.toml
adns/src/: lib.rs
bencode/src/: lib.rs
protocol/src/: lib.rs
rpc/: Cargo.toml
rpc/src/: criterion.rs  lib.rs  resource.rs
session/src/: lib.rs
src/: args.rs  config.rs  handle.rs  init.rs  main.rs  socket.rs  stat.rs  throttle.rs  worker.rs
src/control/: acio.rs  cio.rs  job.rs  mod.rs
src/disk/: cache.rs  job.rs  mod.rs  tests.rs
src/rpc/: client.rs  errors.rs  mod.rs  processor.rs  reader.rs  transfer.rs  writer.rs
src/rpc/proto/: ws.rs
src/torrent/: bitfield.rs  choker.rs  info.rs  mod.rs
src/torrent/peer/: mod.rs  reader.rs  writer.rs
src/torrent/picker/: mod.rs  rarest.rs  sequential.rs  tests.rs
src/tracker/: dns.rs  errors.rs  mod.rs
src/tracker/dht/: mod.rs  proto.rs  rt.rs
src/tracker/dht/test/: proto_test.plat
src/tracker/http/: mod.rs  reader.rs  writer.rs
src/tracker/udp/: mod.rs
src/util/: http.rs  io.rs  mod.rs  native.rs
sstream/: Cargo.toml
sstream/src/: lib.rs
sycli/: Cargo.toml
sycli/src/: client.rs  cmd.rs  error.rs  main.rs
synulator/: Cargo.toml
synulator/src/: state.rs
