[package]
name = "sycli"
version = "0.1.0"
authors = ["Luminarys <postmaster@gensok.io>"]
edition = "2018"

[dependencies]
synapse-rpc = { path = "../rpc" }
synapse-bencode = { path = "../bencode" }
sstream = { path = "../sstream" }
clap = "4"
serde = "1"
serde_json = "1"
serde_derive = "1"
url = "2.1"
prettytable-rs = "0.10"
shellexpand = "3.1"
toml = "0.9"
sha-1 = "0.10.1"
base64 = "0.22.1"
regex = "1"
anyhow = { version = "1.0.98", features = ["backtrace"] }

[dependencies.tungstenite]
version = "0.26.2"
default-features = false
features = [ "handshake" ]

[dependencies.ureq]
version = "3.0"
default-features = false
